# trai

./: .cursorrules  .gitignore  =78.1.1  README - 副本.md  README.md  README_clean.md  TODO.md  ascii.py  check_ico.py  docker-compose.yml  fix_ico.py  nginix.config  notify_push.ps1  output.txt  package.json  reduce_saturation.js  replace_amber.js  replace_amber_all.js  replace_red.js  replace_red_2.js  repository_size_report.md  rewrite.js  rewrite_all.js  rewrite_all_2.js  rewrite_all_3.js  rewrite_components.js  run_inference.py  scan_docs.py  svg_to_png.py  version_update_guide.md  word_to_dingtalk_exam_form_implementation.md  知识库API测试指南.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  cankao  check_comments.py  create_tables.py  docker-compose.yml  docker-dev.ps1  docker-dev.sh  fix_punctuation.py  init_db.py  pyproject.toml  requirements.txt  run.py  seed_i18n.py  verify_schema.py
backend/acestep_lib/: .gitignore  Dockerfile  README.md  TRAIN_INSTRUCTION.md  ZH_RAP_LORA.md  colab_inference.ipynb  convert2hf_dataset.py  docker-compose.yaml  infer-api.py  infer.py  inference.ipynb  requirements.txt  setup.py  trainer-api.py  trainer.py
backend/acestep_lib/acestep/: cpu_offload.py  data_sampler.py  gui.py  pipeline_ace_step.py  (+1 more)
backend/docs/: postgresql_lock_issue.md
backend/env_example/: api.env  app.env  audio.env  cache.env  celery.env  csrf.env  database.env  email.env  env_index.env  exam_share.env  export.env  i18n.env  image.env  jwt.env  llm.env  logging_aggregation.env  logging_basic.env  logging_channel.env  logging_rotation.env  metrics.env  moderation.env  notify_robot.env  permission.env  ratelimit.env  security.env  session.env  sms.env  sso.env  storage.env  tracing.env  upload_advanced.env  upload_basic.env  upload_validate.env  video.env  websocket.env  yida.env
backend/scripts/: init_new_tables.py  install_advanced_dubbing.sh  kb_files_pagination_test.py  knowledge_base_list_indices.py  knowledge_base_workflow_check.py
backend/src/: __init__.py
backend/tests/: __init__.py  test_exam_share_api_http.py  test_exam_share_usecases.py  test_word_exam_api.py  test_word_exam_api_http.py  test_yida_form_creation_usecase.py
(+993 files in other folders)
